# Adamic

./: README.md  app.py  example_ai.py  leaderboard.py  prd.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
adamic/: ai.py  bible.py  config.py  example_gemini_latest_8-04-2025.py
adamic/data/: sample_bible.json
adamic/logic/: database.py  leaderboard.py  xp_manager.py
tests/: conftest.py  test_bible.py  test_leaderboard.py  test_search.py  test_xp_manager.py
